compiler/testData/diagnostics/tests/callableReference/bound/functionCallWithoutArguments.kt
// RUN_PIPELINE_TILL: FRONTEND
fun test() = ("").<!FUNCTION_CALL_EXPECTED!>hashCode<!>::hashCode

/* GENERATED_FIR_TAGS: callableReference, functionDeclaration, stringLiteral */
